@@ -1,6 +1,6 @@
 dnl ---
 dnl acinclude.m4 for ecasound
-dnl last modified: 20050313-11
+dnl last modified: 20050806-12
 dnl ---
 
 ## ------------------------------------------------------------------------
@@ -13,16 +13,34 @@ dnl ---
 AC_DEFUN([AC_CHECK_JACK],
 [
 AC_CHECK_HEADER(jack/jack.h,jack_support=yes,jack_support=no)
+
 AC_ARG_WITH(jack,
-	    [  --with-jack=DIR	Compile against JACK installed in DIR],
-	    [
-	        ECA_S_JACK_LIBS="-L${withval}/lib"
-		ECA_S_JACK_INCLUDES="-I${withval}/include"
-		jack_support=yes
-	    ])
+  [  --with-jack=DIR	Compile against JACK installed in DIR],
+  [
+    ECA_S_JACK_LIBS="-L${withval}/lib"
+    ECA_S_JACK_INCLUDES="-I${withval}/include"
+    jack_support=yes
+  ])
+
 AC_ARG_ENABLE(jack,
-	      [  --disable-jack		  Disable JACK support (default = no)],
-	      jack_support=no)
+  [
+    case "$enableval" in
+      y | yes)
+        AC_MSG_RESULT(yes)
+	jack_support=yes
+      ;;
+
+      n | no)
+        AC_MSG_RESULT(no)
+	jack_support=no
+      ;;
+        
+      *)
+        AC_MSG_ERROR([Invalid parameter value for --enable-jack: $enableval])
+      ;;
+    esac
+ ])
+
 AM_CONDITIONAL(ECA_AM_COMPILE_JACK, test x$jack_support = xyes)
 
 if test x$jack_support = xyes; then
